// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`file resource e2e file resource test: File create 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "Hello, world!",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e file resource test: File create plan 1`] = `
Object {
  "currentState": "",
  "describe": "Write file.txt",
  "diff": "[31m- Original  - 0[39m
[32m+ Modified  + 1[39m

[32m+ Hello, world![39m",
  "newState": "Hello, world!",
}
`;

exports[`file resource e2e file resource test: File destroy 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "Hello, world!1",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e file resource test: File update 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "Hello, world!1",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e file resource test: File update plan 1`] = `
Object {
  "currentState": "Hello, world!",
  "describe": "Write file.txt",
  "diff": "[31m- Original  - 1[39m
[32m+ Modified  + 1[39m

[31m- Hello, world![39m
[32m+ Hello, world!1[39m",
  "newState": "Hello, world!1",
}
`;

exports[`file resource e2e remote file resource test: File create 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "query {
  allGatsbyPlugin {
    nodes {
      name
      options
      resolvedOptions
      package {
        version
      }
      ... on GatsbyTheme {
        files {
          nodes {
            path
          }
        }
        shadowedFiles {
          nodes {
            path
          }
        }
      }
    }
  }  
}",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e remote file resource test: File create plan 1`] = `
Object {
  "currentState": "",
  "describe": "Write file.txt",
  "diff": "[31m- Original  -  0[39m
[32m+ Modified  + 24[39m

[32m+ query {[39m
[32m+   allGatsbyPlugin {[39m
[32m+     nodes {[39m
[32m+       name[39m
[32m+       options[39m
[32m+       resolvedOptions[39m
[32m+       package {[39m
[32m+         version[39m
[32m+       }[39m
[32m+       ... on GatsbyTheme {[39m
[32m+         files {[39m
[32m+           nodes {[39m
[32m+             path[39m
[32m+           }[39m
[32m+         }[39m
[32m+         shadowedFiles {[39m
[32m+           nodes {[39m
[32m+             path[39m
[32m+           }[39m
[32m+         }[39m
[32m+       }[39m
[32m+     }[39m
[32m+   }  [39m
[32m+ }[39m",
  "newState": "query {
  allGatsbyPlugin {
    nodes {
      name
      options
      resolvedOptions
      package {
        version
      }
      ... on GatsbyTheme {
        files {
          nodes {
            path
          }
        }
        shadowedFiles {
          nodes {
            path
          }
        }
      }
    }
  }  
}",
}
`;

exports[`file resource e2e remote file resource test: File destroy 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "https://gist.githubusercontent.com/KyleAMathews/3d763491e5c4c6396e1a6a626b2793ce/raw/545120bfecbe7b0f97f6f021801bc8b6370b5b41/gistfile2.txt",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e remote file resource test: File update 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "https://gist.githubusercontent.com/KyleAMathews/3d763491e5c4c6396e1a6a626b2793ce/raw/545120bfecbe7b0f97f6f021801bc8b6370b5b41/gistfile2.txt",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e remote file resource test: File update plan 1`] = `
Object {
  "currentState": "query {
  allGatsbyPlugin {
    nodes {
      name
      options
      resolvedOptions
      package {
        version
      }
      ... on GatsbyTheme {
        files {
          nodes {
            path
          }
        }
        shadowedFiles {
          nodes {
            path
          }
        }
      }
    }
  }  
}",
  "describe": "Write file.txt",
  "diff": "[31m- Original  - 23[39m
[32m+ Modified  +  3[39m

[31m- query {[39m
[31m-   allGatsbyPlugin {[39m
[31m-     nodes {[39m
[31m-       name[39m
[31m-       options[39m
[31m-       resolvedOptions[39m
[31m-       package {[39m
[31m-         version[39m
[31m-       }[39m
[31m-       ... on GatsbyTheme {[39m
[31m-         files {[39m
[31m-           nodes {[39m
[31m-             path[39m
[31m-           }[39m
[31m-         }[39m
[31m-         shadowedFiles {[39m
[31m-           nodes {[39m
[31m-             path[39m
[31m-           }[39m
[31m-         }[39m
[31m-       }[39m
[31m-     }[39m
[31m-   }  [39m
[32m+ const options = {[39m
[32m+   key: process.env.WHATEVER[39m
[32m+   [39m
[2m  }[22m",
  "newState": "const options = {
  key: process.env.WHATEVER
  
}",
}
`;
